# solvable-minesweeper

./: README.md  meson.build
data/: meson.build  org.gnome.SolvableMines.appdata.xml.in  org.gnome.SolvableMines.desktop.in
data/themes/dark/: theme.css
data/themes/darkHC/: theme.css
src/: interface.ui  meson.build  minefield.vala  solvable.c
